--- a/core/static/css/v2/pages/gallery/gallery.less
+++ b/core/static/css/v2/pages/gallery/gallery.less
@@ -10,7 +10,7 @@
 
 .banner-info {
   &.footer {
-    margin-top: 100vh;
+    // margin-top: 100vh;
   }
 }
 
