--- a/core/static/css/v2/pages/home/home-page.less
+++ b/core/static/css/v2/pages/home/home-page.less
@@ -60,14 +60,12 @@
 
     .item-container {
       .link-to-page {
-        border-top: 1px solid @bg-light;
-        border-bottom: 1px solid @bg-light;
-        padding: 14px;
+
       }
       .margin-left {
         margin-left: 10px;
       }
-      div:first-child {
+      & > div:first-child {
         margin: 0px auto;
         text-align: center;
         span {
@@ -75,24 +73,28 @@
           padding: 2px 10px;
           letter-spacing: 2px;
         }
-        + h1 {
-          .font-size(35);
-          color: @text-light;
-          padding: 40px 0;
-          max-width: 320px;
-          margin: 0;
-          text-align: center;
+      }
+      h1 {
+        .font-size(35);
+        color: @text-light;
+        padding: 40px 0;
+        max-width: 320px;
+        margin: 0;
+        text-align: center;
+      }
 
-          + div {
-            text-align: center;
-            a {
-              padding: 15px 20px;
-              .font-size(16);
-              color: @text-light;
-              &:hover {
-                color: @primary-color;
-              }
-            }
+      & > .link-to-page {
+        border-top: 1px solid @bg-light;
+        border-bottom: 1px solid @bg-light;
+        padding: 14px;
+        text-align: center;
+        a {
+          padding: 15px 20px;
+          .font-size(16);
+          color: @text-light;
+
+          &:hover {
+            color: @primary-color;
           }
         }
       }
